syntax = "proto3";

package proto;

message LibraryMessage {
  string id = 5;
  string name = 1;
  string path = 2;
  string library = 4;
}

message IndexEntryMessage {
  string hash = 1;
  string name = 2;
  string path = 3;
  string create_date = 4;
  int32 rating = 5;
  int32 orientation = 6;
  repeated string tags = 7;
}

message MetadataEntryMessage {
  string hash = 1;
  string name = 2;
  string create_date = 3;
  int32 rating = 4;
  int32 width = 5;
  int32 height = 6;
  string make = 7;
  string exif = 8;
  int32 orientation = 9;
  bytes thumbnail = 10;
  repeated string tags = 11;
}

message MetadataMessage {
  repeated MetadataEntryMessage entries = 1;
}

message ImageMessage {
  bytes image = 2;
  int32 width = 3;
  int32 height = 4;
}

message TagMessage {
  string id = 1;
  string name = 2;
}

message LibraryListMessage {
  repeated LibraryMessage libraries = 1;
  repeated TagMessage tags = 2;
}

message LibraryIndexMessage {
  repeated IndexEntryMessage index = 1;
}

message SystemInfo {
  string disk_name = 1;
  int32 disk_size = 3;
  int32 disk_available = 4;
}

message Message {
  optional string nonce = 1;
  optional string message = 2;
  optional bool error = 3;
  oneof msg {
    LibraryListMessage list = 5;
    LibraryIndexMessage index = 6;
    MetadataMessage metadata = 7;
    ImageMessage image = 8;
    SystemInfo system = 9;
  }
}

message CreateLibraryMessage {
  string name = 1;
  string path = 2;
}

message RequestLibraryIndex {
  repeated string ids = 1;
}

message RequestLocations {}

message RequestMetadata {
  repeated string file = 1;
}

message RequestImage {
  string file = 1;
  optional string edits = 2;
}

message PostFileMetadata {
  string file = 1;
  optional int32 rating = 2;
  repeated string tags = 3;
}

message ClientMessage {
  optional string nonce = 1;
  oneof msg {
    CreateLibraryMessage create = 5;
    RequestLibraryIndex index = 6;
    RequestMetadata meta = 7;
    RequestImage image = 8;
    PostFileMetadata postmeta = 9;
    RequestLocations locations = 10;
  }
}
